--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-webrtc-video-stream",
   "description": "Nodejs WebRTC video stream with EasyRTC",
-  "repository": "https://github.com/renanpupin/nodejs-webrtc-video-stream.git",
+  "repository": "https://github.com/renanpupin/nodejs-webrtc-video-stream",
   "logo": "",
   "keywords": ["webrtc", "nodejs", "video streaming"]
 }
