--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "nodejs-webrtc-video-stream",
   "description": "Nodejs WebRTC video stream with EasyRTC",
   "repository": "https://github.com/renanpupin/nodejs-webrtc-video-stream",
-  "logo": "https://github.com/renanpupin/nodejs-webrtc-video-stream/WebRTC_Logo.png",
+  "logo": "https://raw.githubusercontent.com/renanpupin/nodejs-webrtc-video-stream/master/WebRTC_Logo.png",
   "keywords": ["webrtc", "nodejs", "video streaming"]
 }
